# algo-svc-amqp-POC

./: CMakeLists.txt  Dockerfile  Readme.md
algo-svc/: AlgoSvcSim.cpp  AlgoSvcSim.h  CMakeLists.txt  main.cpp
common/: AmqpPub.cpp  AmqpPub.h  AmqpSub.cpp  AmqpSub.h  CommonDefs.h  Utils.cpp  Utils.h
vid-svc/: CMakeLists.txt  VideoSvcSim.cpp  VideoSvcSim.h  main.cpp
